K8S/commands-depl.yaml
# Kubernetes configuration for Command Service for pod creation
# -------------------------------------------------------------

# Pod configuration to create "Pod" to hold the container service inside Kubernetes.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1 # Defines the number of docker containers indicating horizontal scaling.
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: karthiksreenivasan/commandservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
    type: ClusterIP
    selector:
      app: commandservice
    ports: 
    - name: commandservice
      protocol: TCP
      port: 80
      targetPort: 80
