K8S/patforms-depl.yaml
# Kubernetes configuration for Platform Service for pod creation
# --------------------------------------------------------------

# Pod configuration to create "Pod" to hold the container service inside Kubernetes.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1 # Defines the number of docker containers indicating horizontal scaling.
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: karthiksreenivasan/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
