K8S/platforms-np-srv.yaml
# Service configuration to create "Node Port" to expose the container in the Pod managed by Kubernetes.
apiVersion: v1
kind: Service
metadata:
    name: platformnpservice-srv
spec:
    type: NodePort
    selector:
        app: platformservice
    ports:
        - name: platformservice #Not mandatory. More useful if there are 2 or more.
          protocol: TCP
          port: 80
          targetPort: 80
